# ircbot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  create.sql
AI/: CMakeLists.txt  Makefile
AI/include/: Pokemon.h  config.h  database.h  database_structs.h  luneth.h  span.h
AI/src/: PokemonDB.c  chan.c  cmd.c  command_action.c  command_calc.c  command_cmd.c  command_ping.c  command_pokemon.c  command_pokemon_questions.c  command_say.c  command_self_command.c  command_shifumi.c  command_song.c  command_songid.c  config.c  config_key_server.c  config_modules.c  database.c  hl_all.c  in_connect.c  in_disconnect.c  in_join.c  in_list.c  in_msg.c  in_raw.c  in_reload.c  input.c  irc_utils.c  luneth.c  mess_join.c  mess_privmsg.c  message.c  people.c  say.c  song.c  span.c  youtube_title.c
AI/src/database/: channels.c  commands.c  database.c  helper.c  message.c  people.c  say.c  songs.c  sqlite.c
main/: CMakeLists.txt  Makefile
main/include/: ircbot.h  scheduler.h  vector.h
main/src/: AI.c  botutils.c  main.c  scheduler.c  select.c  vector.c
tests/: CMakeLists.txt
tests/libassert/: CMakeLists.txt  expected.stderr  expected.stdout  myassert.c  myassert.h  run_tests.sh  test.c
tests/src/: main.c  test_cmd_ping.c  test_common.c  test_common.h
